kubernetes/manifests/cloudflare/templates/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  namespace: cloudflare
spec:
  endpointSelector: {}
  ingress:
    - fromCIDRSet:
        - cidr: 198.41.128.0/17 # Cloudflare tunnel CIDR
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: bsk-api
        - matchLabels:
            io.kubernetes.pod.namespace: recipes
        - matchLabels:
            io.kubernetes.pod.namespace: glance
        - matchLabels:
            io.kubernetes.pod.namespace: audiobook
        - matchLabels:
            io.kubernetes.pod.namespace: bsk-lead
        - matchLabels:
            io.kubernetes.pod.namespace: immich
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
        - matchLabels:
            io.kubernetes.pod.namespace: nextcloud
        
    # Allow Cloudflare 
    - toFQDNs:
      - matchPattern: "*.cloudflare.com"
      - matchPattern: "*.*.cloudflare.com"
      - matchPattern: "*.*.argotunnel.com"
    - toCIDRSet:
        - cidr: 198.41.128.0/17 # Cloudflare tunnel CIDR
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
    - toCIDRSet:
        - cidr: 1.1.1.1/32
      toPorts:
        - ports:
            - port: "853"
              protocol: TCP
